<resources>
    <string name="app_name">Mobile Duel</string>

    <!--                          MAIN                         -->

    <string name="mode">mode</string>
    <string name="play">play</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="automatic_game">Automatic Game</string>
    <string name="manual_game">Manual Game</string>
    <string name="records">Records</string>
    <string name="update_records">Reset Records</string>
    <string name="roll_dice">roll dice</string>
    <string name="location_rationale">Please permit the application to access your location to fully enjoy it.</string>
    <string name="location_yes">Sure</string>
    <string name="location_no">No</string>

    <!--                         GAME                         -->

    <string name="light_attack">Light Attack</string>
    <string name="heavy_attack">Heavy Attack</string>
    <string name="heal">Heal</string>
    <string name="left_player">LEFT_PLAYER</string>
    <string name="right_player">RIGHT_PLAYER</string>
    <string name="main_background">MAIN_BACKGROUND</string>

    <!--                         FINISH                         -->

    <string name="left_won">Left Player Won!</string>
    <string name="right_won">Right Player Won!</string>
    <string name="turns_amount">Turns Played:</string>
    <string name="back">back</string>

    <!--                         RECORD                         -->

    <string name="turns">   Turns:</string>


</resources>