<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_game">

    <ImageView
        android:id="@+id/game_IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/main_background"
        android:scaleType="centerCrop"
    />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/game_BTN_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_dice"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@color/purple_text"
        android:backgroundTint="@color/green"
        />

    <ProgressBar
        android:id="@+id/game_BAR_leftPlayer"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_above="@id/game_IMG_leftPlayer"
        android:progressDrawable="@drawable/progressbar_border"
    />

    <ProgressBar style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/game_BAR_rightPlayer"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/game_IMG_rightPlayer"
        android:layout_marginBottom="10dp"
        android:progressDrawable="@drawable/progressbar_border"
        />

    <ImageView
        android:id="@+id/game_IMG_leftPlayer"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/left_player"
        />

    <ImageView
        android:id="@+id/game_IMG_rightPlayer"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/right_player"
        />


    <LinearLayout
        android:id="@+id/game_LBL_leftPlayerLayout"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/game_IMG_leftPlayer">

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/game_BTN_leftlight"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:text="@string/light_attack"
            android:textStyle="bold"
            android:textColor="@color/purple_text"
            />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/game_BTN_leftheavy"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:text="@string/heavy_attack"
            android:textStyle="bold"
            android:textColor="@color/purple_text"
            />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/game_BTN_leftheal"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:text="@string/heal"
            android:textStyle="bold"
            android:textColor="@color/purple_text"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_LBL_rightPlayerLayout"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/game_IMG_rightPlayer">

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/game_BTN_rightlight"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:text="@string/light_attack"
            android:textStyle="bold"
            android:textColor="@color/purple_text"
        />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/game_BTN_rightheavy"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:text="@string/heavy_attack"
            android:textStyle="bold"
            android:textColor="@color/purple_text"
        />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/game_BTN_rightheal"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:text="@string/heal"
            android:textStyle="bold"
            android:textColor="@color/purple_text"
        />
</LinearLayout>

    <ImageView
        android:id="@+id/game_IMG_dice1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="200dp"
        />

    <ImageView
        android:id="@+id/game_IMG_dice2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="200dp"
        />


</RelativeLayout>